11-security-devsecops/07-kyverno-gatekeeper-admission-policies/policies/kyverno/require-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers should not run as root (UID 0). Running as a non-root user limits the
      blast radius of potential container breakouts and privilege escalation exploits.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Running as root is not allowed. Set securityContext.runAsNonRoot to true."
        pattern:
          spec:
            =(securityContext):
              =(runAsNonRoot): true
            =(ephemeralContainers):
              - =(securityContext):
                  =(runAsNonRoot): true
            =(initContainers):
              - =(securityContext):
                  =(runAsNonRoot): true
            containers:
              - =(securityContext):
                  =(runAsNonRoot): true
